// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MD2Tabs > gracefully handles an out of bound selectedTab value 1`] = `
<DocumentFragment>
  <div
    class="tabs_ff8rz57"
  >
    <div
      class="indicator_fp4eggn"
    />
    <span
      style="display: inline-block; min-width: 20px; width: 20px;"
    />
    <button
      class="MuiButtonBase-root-211 MuiButton-root-185 MuiButton-text-187 MuiButton-flat-190 button_ff2g68i active_fz0wpsl"
      tabindex="0"
      title=""
      type="button"
    >
      <span
        class="MuiButton-label-186"
      >
        <span>
          tab1
        </span>
      </span>
      <span
        class="MuiTouchRipple-root-214"
      />
    </button>
    <button
      class="MuiButtonBase-root-211 MuiButton-root-185 MuiButton-text-187 MuiButton-flat-190 button_ff2g68i"
      tabindex="0"
      title=""
      type="button"
    >
      <span
        class="MuiButton-label-186"
      >
        <span>
          tab2
        </span>
      </span>
      <span
        class="MuiTouchRipple-root-214"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`MD2Tabs > renders with the right styles by default 1`] = `
<DocumentFragment>
  <div
    class="tabs_ff8rz57"
  >
    <div
      class="indicator_fp4eggn"
    />
    <span
      style="display: inline-block; min-width: 20px; width: 20px;"
    />
    <button
      class="MuiButtonBase-root-35 MuiButton-root-9 MuiButton-text-11 MuiButton-flat-14 button_ff2g68i active_fz0wpsl"
      tabindex="0"
      title=""
      type="button"
    >
      <span
        class="MuiButton-label-10"
      >
        <span>
          tab1
        </span>
      </span>
      <span
        class="MuiTouchRipple-root-38"
      />
    </button>
    <button
      class="MuiButtonBase-root-35 MuiButton-root-9 MuiButton-text-11 MuiButton-flat-14 button_ff2g68i"
      tabindex="0"
      title=""
      type="button"
    >
      <span
        class="MuiButton-label-10"
      >
        <span>
          tab2
        </span>
      </span>
      <span
        class="MuiTouchRipple-root-38"
      />
    </button>
  </div>
</DocumentFragment>
`;
